[package]
name = "map-svc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "macros"] }
tokio = {version = "1.35.1", features = ["full"] }
tower = "0.4.13"
