[package]
name = "map-svc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "macros"] }
geo-types = "0.7.12"
geojson = { version = "0.24.1", features = ["geo-types"] }
plotters = { version = "0.3.5", default-features = false, features = ["svg_backend", "full_palette", "ab_glyph"] }
proj = { version = "0.27.2", features = ["bundled_proj", "pkg_config"] }
redis = { version = "0.24.0", features = ["aio", "tokio-comp", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = {version = "1.35.1", features = ["full"] }
tower = "0.4.13"
