[package]
name = "scrape-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.5"
geojson = "0.24.1"
gtfs-rt = "0.4.0"
prost = "0.11"
redis = { version = "0.24.0", features = ["aio", "tokio-comp", "json"] }
reqwest = { version = "0.11.23", default-features = false, features = ["hyper-rustls", "rustls-tls", "tokio-rustls"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "time"] }
